feat(sandside): #139 implement the GQL controller for subscripbe
refs #139